--- a/work_env/basic_graph_ql_CRUD_API/backend/.env
+++ b/work_env/basic_graph_ql_CRUD_API/backend/.env
@@ -1,2 +1,4 @@
 DATABASE=mongodb+srv://kamallochanboruah:Ums20XFM2nASWcum@cluster0.a4noklv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=8080
+TOKEN_SECRET=8fe2f9d274d086b93d10697acee01078
+TOKEN_EXPIRY=2h
